Bug #13461  	Slave Cluster crashed on restart of two data nodes in seperate groups - ensure in ndb_mgmd that the stop command is not issued if a node is restarting - added some new error messages - in ndbcntr on master check so that node does not shutdown id shutdoen in progress